logs/ng.app.remotefs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ng'...
Listing './lib/python3.5/site-packages/ng/app'...
Listing './lib/python3.5/site-packages/ng/app/remotefs'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/browser'...
Compiling './lib/python3.5/site-packages/ng/app/remotefs/browser/remoteobject.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/browser/remoteobject.py", line 22
    except Exception, msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/remotefs/etc'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remoteconnector'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/browser'...
Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/remoteconnectorhttp.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/remoteconnectorhttp.py", line 25
    raise ValueErroe,"Invalid prefix %s instead %s" % (prefix,self.prefix)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/remoteconnectorsvn.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/remoteconnectorsvn.py", line 41
    except SubversionException,msg :
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/svntest.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/svntest.py", line 75
    except svn.core.SubversionException, e:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/svnwrapper.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteconnector/svnwrapper.py", line 47
    print isdir('https://code.keysolutions.ru/svn/ks/trunk/ks/doc/article/vocabulary')
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/remotefs/remoteconnectorvocabulary'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remotecontainer'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remotecontainer/browser'...
Compiling './lib/python3.5/site-packages/ng/app/remotefs/remotecontainer/remotecontainer.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remotecontainer/remotecontainer.py", line 65
    except KeyError,msg:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/remotefs/remotefactory'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remotefile'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remotefile/browser'...
Compiling './lib/python3.5/site-packages/ng/app/remotefs/remotefile/remotefile.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remotefile/remotefile.py", line 44
    print "Result",res
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteobject.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteobject.py", line 60
    print getUtility(IRemoteConnector,self.prefix,context=self).date(self.prefix,self.path)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/remotefs/remoteregistry'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remoteregistry/browser'...
Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteregistry/remoteregistryhandler.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteregistry/remoteregistryhandler.py", line 20
    except ComponentLookupError,msg :
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/remotefs/remoteupdate'...
Listing './lib/python3.5/site-packages/ng/app/remotefs/remoteupdate/browser'...
Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteupdate/browser/demo.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteupdate/browser/demo.py", line 22
    print "Result:",server.update(sys.stdin.readlines())
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ng/app/remotefs/remoteupdate/remoteupdate.py'...
***   File "./lib/python3.5/site-packages/ng/app/remotefs/remoteupdate/remoteupdate.py", line 50
    print "The path",path,"running..."
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ng.app.remotefs-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
